--- a/static/css/style.css
+++ b/static/css/style.css
@@ -238,6 +238,11 @@
     z-index: 1;
 }
 
+.small-img {
+    max-width: 400px; /* Adjust the width as needed */
+    height: auto; /* Maintain aspect ratio */
+}
+
 
 /*** Category ***/
 .cat-item div {
@@ -256,7 +261,7 @@
 }
 
 .cat-item:hover div * {
-    color: #FFFFFF !important;
+    color: inherit !important;
 }
 
 
@@ -441,4 +446,11 @@
     margin-right: 0;
     padding-right: 0;
     border-right: none;
+}
+
+.decorative-border {
+    border: 5px solid #006400; /* Dark Green */
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
