--- a/templates/contact.html
+++ b/templates/contact.html
@@ -73,7 +73,7 @@
                     <h1 class="display-5 animated fadeIn mb-4">Contact Us</h1> 
                 </div>
                 <div class="col-md-6 animated fadeIn">
-                    <img class="img-fluid" src="{{ url_for('static', filename='img/IMG_7453.jpg') }}" alt="">
+                    <img class="img-fluid" src="{{ url_for('static', filename='img/Copy of Green Paddy Hills 3.png') }}" alt="">
                 </div>
             </div>
         </div>
