update login dan dasboard

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -73,7 +73,7 @@
                     <h1 class="display-5 animated fadeIn mb-4">Contact Us</h1> 
                 </div>
                 <div class="col-md-6 animated fadeIn">
-                    <img class="img-fluid" src="{{ url_for('static', filename='img/IMG_7453.jpg') }}" alt="">
+                    <img class="img-fluid" src="{{ url_for('static', filename='img/Copy of Green Paddy Hills 3.png') }}" alt="">
                 </div>
             </div>
         </div>
@@ -160,7 +160,7 @@
                     </div>
                     <div class="col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <iframe class="position-relative rounded w-100 h-100"
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4112.767236108597!2d106.81238001074418!3d-6.63223406480676!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69cf5487e5e0e9%3A0x63a561fff860fe!2sJl.%20Kp.%20Sukawarna%20No.2%2C%20RT.01%2FRW.18%2C%20Cipaku%2C%20Kec.%20Bogor%20Sel.%2C%20Kota%20Bogor%2C%20Jawa%20Barat%2016133!5e1!3m2!1sid!2sid!4v1744868914806!5m2!1sid!2sid"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3963.1051158933096!2d106.81370887475427!3d-6.633865693360545!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69cfe668fb8481%3A0x33288b202cfd59b8!2sCluster%20Green%20Paddy%20Hills!5e0!3m2!1sen!2sid!4v1745504355483!5m2!1sen!2sid"
                             frameborder="0" style="min-height: 400px; border:0;" allowfullscreen="" aria-hidden="false"
                             tabindex="0"></iframe>
                     </div>
@@ -178,7 +178,7 @@
                                     <div class="col-md-6">
                                         <div class="form-floating">
                                             <input type="email" class="form-control" id="email" name="email" placeholder="Email Anda" required>
-                                            <label for="email">Email Anda</label>
+                                            <label for="email">Nomor Anda</label>
                                         </div>
                                     </div>
                                     <div class="col-12">
