--- a/templates/index.html
+++ b/templates/index.html
@@ -155,14 +155,15 @@
                 <div class="row g-5 align-items-start">
                     <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                         <div class="position-relative overflow-hidden p-0">
-                            <img class="img-fluid w-100 small-img"
+                            <img class="img-fluid small-img d-block ms-auto me-auto"
+                                style="max-width: 100%;"
                                 src="{{url_for('static' ,filename='img/type.jpg')}}"
                                 alt="">
                         </div>
                     </div>
                     <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                         <h2 class="text-green mb-3" style="color: #003366; font-weight: 400; font-size: 1.25rem;">
-                            Tipe Rumah Green Paddy Hills Terrace
+                            Tipe Rumah Green Paddy Hills
                         </h2>
                         <!-- <div style="width: 56px; height: 4px; background-color: #9ad1b3; margin-bottom: 1rem;"></div> -->
                         <p>
@@ -181,14 +182,12 @@
         <div class="container-xxl py-5" style="background-color: #ccffcc; border-radius: 8px;">
             <div class="container">
                 <div class="row g-5 align-items-start">
+                    <h2 class="text-green mb-3 text-center" style="color: #003366; margin-top: 30px; font-weight: 400; font-size: 1.55rem;">
+                        GREEN PADDY HILLS CONCEPT
+                    </h2>
                     <div class="row g-5 align-items-center" >
-                        <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                            <h2 class="text-green mb-3" style="color: #003366; font-weight: 400; font-size: 1.25rem;">
-                                Jelajahi Properti Eksklusif Kami
-                            </h2>
-                            <p>
-                                Dive into the world of luxury with our exclusive properties. Watch the video to see the exquisite design and top-notch amenities that set our homes apart.
-                            </p>
+                        <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s"> 
+                            <img class="img-fluid w-100 small-img mt-3 img" src="{{ url_for('static', filename='img/Copy Of Site Plan.png') }}" style="width:100%; height: 300px; object-fit: cover;" alt="Type Property">
                         </div>
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                             <div class="position-relative overflow-hidden p-0">
@@ -206,7 +205,7 @@
                 <div class="row g-0 gx-5 align-items-end justify-content-center shadow-sm py-3 px-4 mb-4" style="background-color: #006400; border-bottom: 4px solid #006400;">
                     <div class="col-lg-6">
                         <div class="text-center mx-auto wow" data-wow-delay="0.1s">
-                            <h1 class="mb-0 text-white">UNIT TERSEDIA</h1>
+                            <h1 class="mb-0 text-white">UNIT SIAP HUNI</h1>
                         </div>
                     </div>
                 </div>                                
@@ -223,13 +222,14 @@
                                     </div>
                                     <div class="d-flex border-top">
                                         <small class="flex-fill text-center border-end py-2 d-flex justify-content-center align-items-center">
-                                            <i class="fa fa-ruler-combined text-primary me-2"></i>72 m<sup>2</sup> (6m x 12m)
+                                            <i class="fa fa-ruler-combined text-primary me-2"></i><span>72 m<sup>2</sup> (6m x 12m)</span>
                                         </small>
                                         <small class="flex-fill text-center border-end py-2"><i class="fa fa-bed text-primary me-2"></i>2 Bed</small>
                                         <small class="flex-fill text-center py-2"><i class="fa fa-bath text-primary me-2"></i>1 Bath</small>
                                     </div>
                                     <div class="text-center py-3" style="background-color: #ccffcc;">
-                                        <a href="https://api.whatsapp.com/send?phone=6281298170513?text=Hi%2C%20I%27m%20interested%20in%20house%20B6%2C%20can%20I%20get%20the%20pricelist%3F" class="btn" style="background-color: #006400; color: white; padding: 12px 24px; font-size: 1.1rem;">INFO PRICE</a>
+                                        <a href="https://wa.me/6281298170513?text=Boleh%20bertanya%20untuk%20unit%20B6%3F
+                                        " class="btn" style="background-color: #006400; color: white; padding: 12px 24px; font-size: 1.1rem;">INFO PRICE LIST</a>
                                     </div>
                                 </div>
                             </div>
@@ -247,7 +247,8 @@
                                         <small class="flex-fill text-center py-2"><i class="fa fa-bath text-primary me-2"></i>1 Bath</small>
                                     </div>
                                     <div class="text-center py-3" style="background-color: #ccffcc;">
-                                        <a href="https://api.whatsapp.com/send?phone=6281298170513?text=Hi%2C%20I%27m%20interested%20in%20house%20B7%2C%20can%20I%20get%20the%20pricelist%3F" class="btn" style="background-color: #006400; color: white; padding: 12px 24px; font-size: 1.1rem;">INFO PRICE</a>
+                                        <a href="https://wa.me/6281298170513?text=Boleh%20bertanya%20untuk%20unit%20B7%3F
+                                        " class="btn" style="background-color: #006400; color: white; padding: 12px 24px; font-size: 1.1rem;">INFO PRICE LIST</a>
                                     </div>
                                 </div>
                             </div>
@@ -268,7 +269,7 @@
                             <img class="img-fluid w-100" src="{{url_for('static', filename='img/promo.jpg')}}" alt="">
                         </div>
                     </div>
-                    <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" style="font-size: 1.3rem;">
+                    <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" style="font-size: 1.1rem;">
                         <h2 class="mb-4">PROMO <br>Green Paddy Hills</h2>
                         <div style="width: 100px; height: 4px; background-color: #9ad1b3; margin-bottom: 1rem;"></div>
                         <p>Miliki hunian di Green Paddy Hills, rumah modern & minimalis dengan promo - promo yang menarik berikut ini:</p>
@@ -279,10 +280,10 @@
                             <li>✅ Booking Only 3 Juta</li>
                             <li>✅ Free PPN</li>
                         </ul>
-                        <p>Special GIFT & PROMO💝</p>
+                        <p>Special GIFT & PROMO</p>
                         <ul>
-                            <li>🎁 Discount 30 JT</li>
-                            <li>🎁 Subsidi Bunga 1 Thn (3,99%)</li>
+                            <li> Discount 30 JT</li>
+                            <li> Subsidi Bunga 1 Thn (3,99%)</li>
                         </ul>
                         <p>Ayo segera pilih hunian idaman kamu bersama Green Paddy Hills dan dapatkan Potongan Harga hingga 200jutaan!</p>
                         <p>*Periode & Unit Terbatas</p>
@@ -409,8 +410,8 @@
                             <div class="d-flex align-items-center">
                                 <!-- <img class="img-fluid flex-shrink-0 rounded" src="{{url_for('static', filename='img/testimonial-1.jpg')}}" style="width: 45px; height: 45px;"> -->
                                 <div class="ps-3 text-center">
-                                    <h6 class="fw-bold mb-1">Customer</h6>
-                                    <small>Profession</small>
+                                    <h6 class="fw-bold mb-1" style="margin-left: 180px;" >Customer</h6>
+                                    <small style="margin-left: 180px;" >Profession</small>
                                 </div>
                             </div>
                         </div>
@@ -421,8 +422,8 @@
                             <div class="d-flex align-items-center">
                                 <!-- <img class="img-fluid flex-shrink-0 rounded" src="{{url_for('static', filename='img/testimonial-2.jpg')}}" style="width: 45px; height: 45px;"> -->
                                 <div class="ps-3">
-                                    <h6 class="fw-bold mb-1">Customer</h6>
-                                    <small>Profession</small>
+                                    <h6 class="fw-bold mb-1" style="margin-left: 180px;" >Customer</h6>
+                                    <small style="margin-left: 185px;" >Profession</small>
                                 </div>
                             </div>
                         </div>
@@ -433,8 +434,8 @@
                             <div class="d-flex align-items-center">
                                 <!-- <img class="img-fluid flex-shrink-0 rounded" src="{{url_for('static', filename='img/testimonial-3.jpg')}}" style="width: 45px; height: 45px;"> -->
                                 <div class="ps-3">
-                                    <h6 class="fw-bold mb-1">Customer</h6>
-                                    <small>Profession</small>
+                                    <h6 class="fw-bold mb-1" style="margin-left: 180px;" >Customer</h6>
+                                    <small style="margin-left: 185px;" >Profession</small>
                                 </div>
                             </div>
                         </div>
@@ -473,9 +474,6 @@
                         <div class="row g-1 pt-1">
                             <div class="col-4">
                                 <img class="img-fluid rounded bg-light p-1" src="{{url_for('static', filename='img/IMG_7644.jpg')}}" alt="">
-                            </div>
-                            <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1" src="{{url_for('static', filename='img/IMG_7453.jpg')}}" alt="">
                             </div>
                             <div class="col-4">
                                 <img class="img-fluid rounded bg-light p-1" src="{{url_for('static', filename='img/IMG_7645.jpg')}}" alt="">
