--- a/templates/index.html
+++ b/templates/index.html
@@ -212,46 +212,28 @@
                 <div class="tab-content">
                     <div id="tab-1" class="tab-pane fade show p-0 active">
                         <div class="row g-4 justify-content-center">
+                            {% for property in properties %}
                             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                                 <div class="property-item rounded overflow-hidden">
                                     <div class="position-relative overflow-hidden">
-                                        <a href=""><img class="img-fluid" style="width: 100%; height: 500px; object-fit: cover;" src="{{ url_for('static', filename='img/B6.jpg') }}" alt=""></a>
+                                        <a href=""><img class="img-fluid" style="width: 100%; height: 500px; object-fit: cover;" src="data:image/jpeg;base64,{{ property.gambar_rumah|b64encode }}" alt=""></a>
                                     </div>
                                     <div class="p-4 pb-0 text-center d-flex justify-content-center align-items-center" style="height: 60px;">
-                                        <a class="d-block h5 mb-2" href="">UNIT B6</a>
+                                        <a class="d-block h5 mb-2" href="">{{ property.nama_properti }}</a>
                                     </div>
                                     <div class="d-flex border-top">
                                         <small class="flex-fill text-center border-end py-2 d-flex justify-content-center align-items-center">
-                                            <i class="fa fa-ruler-combined text-primary me-2"></i><span>72 m<sup>2</sup> (6m x 12m)</span>
+                                            <i class="fa fa-ruler-combined text-primary me-2"></i><span>{{ property.luas_rumah }}</span>
                                         </small>
-                                        <small class="flex-fill text-center border-end py-2"><i class="fa fa-bed text-primary me-2"></i>2 Bed</small>
-                                        <small class="flex-fill text-center py-2"><i class="fa fa-bath text-primary me-2"></i>1 Bath</small>
+                                        <small class="flex-fill text-center border-end py-2"><i class="fa fa-bed text-primary me-2"></i>{{ property.kasur }} Bed</small>
+                                        <small class="flex-fill text-center py-2"><i class="fa fa-bath text-primary me-2"></i>{{ property.kamar_mandi }} Bath</small>
                                     </div>
                                     <div class="text-center py-3" style="background-color: #ccffcc;">
-                                        <a href="https://wa.me/6281298170513?text=Boleh%20bertanya%20untuk%20unit%20B6%3F
-                                        " class="btn" style="background-color: #006400; color: white; padding: 12px 24px; font-size: 1.1rem;">INFO PRICE LIST</a>
+                                        <a href="https://wa.me/6281298170513?text=Boleh%20bertanya%20untuk%20{{ property.nama_properti }}%3F" class="btn" style="background-color: #006400; color: white; padding: 12px 24px; font-size: 1.1rem;">INFO PRICE LIST</a>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                                <div class="property-item rounded overflow-hidden">
-                                    <div class="position-relative overflow-hidden">
-                                        <a href=""><img class="img-fluid" style="width: 100%; height: 500px; object-fit: cover;" src="{{ url_for('static', filename='img/B7.jpg') }}" alt=""></a>
-                                    </div>
-                                    <div class="p-4 pb-0 text-center d-flex justify-content-center align-items-center" style="height: 60px;">
-                                        <a class="d-block h5 mb-2" href="">UNIT B7</a>
-                                    </div>
-                                    <div class="d-flex border-top">
-                                        <small class="flex-fill text-center border-end py-2"><i class="fa fa-ruler-combined text-primary me-2"></i>71 m<sup>2</sup> (6m x 12m)</small>
-                                        <small class="flex-fill text-center border-end py-2"><i class="fa fa-bed text-primary me-2"></i>2 Bed</small>
-                                        <small class="flex-fill text-center py-2"><i class="fa fa-bath text-primary me-2"></i>1 Bath</small>
-                                    </div>
-                                    <div class="text-center py-3" style="background-color: #ccffcc;">
-                                        <a href="https://wa.me/6281298170513?text=Boleh%20bertanya%20untuk%20unit%20B7%3F
-                                        " class="btn" style="background-color: #006400; color: white; padding: 12px 24px; font-size: 1.1rem;">INFO PRICE LIST</a>
-                                    </div>
-                                </div>
-                            </div>
+                            {% endfor %}
                         </div>
                     </div>
                 </div>                
