--- a/templates/about.html
+++ b/templates/about.html
@@ -111,15 +111,14 @@
                     <div class="bg-white rounded p-4" style="border: 1px dashed rgba(0, 185, 142, .3)">
                         <div class="row g-5 align-items-center">
                             <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-                                <img class="img-fluid rounded w-100" src="{{ url_for('static', filename='img/call-to-action.jpg') }}" alt="">
+                                <img class="img-fluid rounded w-100" src="{{url_for('static', filename='img/cpg.png')}}" alt="" style="width: 10%">
                             </div>
                             <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                                 <div class="mb-4">
-                                    <h1 class="mb-3">Contact With Our Certified Agent</h1>
-                                    <p>Eirmod sed ipsum dolor sit rebum magna erat. Tempor lorem kasd vero ipsum sit sit diam justo sed vero dolor duo.</p>
+                                    <h1 class="mb-3">Miliki Segera Hunian Impian Anda
+                                        Dengan harga penawaran terbaik, serta berbagai promo spesial yang ditawarkan khusus untuk Anda </h1>
                                 </div>
-                                <a href="" class="btn py-3 px-4 me-2" style="background-color: #006400; color: white;"><i class="fa fa-phone-alt me-2"></i>Make A Call</a>
-                                <a href="" class="btn btn-dark py-3 px-4"><i class="fa fa-calendar-alt me-2"></i>Get Appoinment</a>
+                                <a href="https://wa.me/6281298170513?text=Boleh%20bertanya%20untuk%20perumahan%20Greenpaddyhills%20ini?" class="btn py-3 px-4 me-2" style="background-color: #006400; color: white; margin-left: 150px;"><i class="fa fa-phone-alt me-2"></i>Hubungi Kami Melalui Whatsapp</a>
                             </div>
                         </div>
                     </div>
@@ -131,36 +130,25 @@
 
         <!-- Footer Start -->
         <!-- Footer Start -->
-        <div class="container-fluid text-white-50 footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
-            <div class="container py-5">
-                <div class="row g-5">
+        <div class="container-fluid text-white-50 footer pt-3 mt-3 wow fadeIn" data-wow-delay="0.1s">
+            <div class="container py-3">
+                <div class="row g-3">
                     <div class="col-lg-3 col-md-6">
-                        <h5 class="text-white mb-4">Get In Touch</h5>
-                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Jl. Sukawarna no 2, Cipaku Kota Bogor</p>
-                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>081298170513</p>
-                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>greenpaddyhillsofficial@gmail.com</p>
-                        <div class="d-flex pt-2">
+                        <h5 class="text-white mb-3">Get In Touch</h5>
+                        <p class="mb-1"><i class="fa fa-map-marker-alt me-2"></i>Jl. Sukawarna no 2, Cipaku Kota Bogor</p>
+                        <p class="mb-1"><i class="fa fa-phone-alt me-2"></i>081298170513</p>
+                        <p class="mb-1"><i class="fa fa-envelope me-2"></i>greenpaddyhillsofficial@gmail.com</p>
+                        <div class="d-flex pt-1">
                             <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/greenpaddyhills"><i class="fab fa-instagram"></i></a>
                             <a class="btn btn-outline-light btn-social" href="https://www.tiktok.com/@greenpaddyhills"><i class="fab fa-tiktok"></i></a>
                             <a class="btn btn-outline-light btn-social" href="https://wa.me/081298170513"><i class="fab fa-whatsapp"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <h5 class="text-white mb-4">Quick Links</h5>
-                        <a class="btn btn-link text-white-50" href="">About Us</a>
-                        <a class="btn btn-link text-white-50" href="">Contact Us</a>
-                        <a class="btn btn-link text-white-50" href="">Our Services</a>
-                        <a class="btn btn-link text-white-50" href="">Privacy Policy</a>
-                        <a class="btn btn-link text-white-50" href="">Terms & Condition</a>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <h5 class="text-white mb-4">Photo Gallery</h5>
-                        <div class="row g-2 pt-2">
+                        <h5 class="text-white mb-3">Photo Gallery</h5>
+                        <div class="row g-1 pt-1">
                             <div class="col-4">
                                 <img class="img-fluid rounded bg-light p-1" src="{{url_for('static', filename='img/IMG_7644.jpg')}}" alt="">
-                            </div>
-                            <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1" src="{{url_for('static', filename='img/IMG_7453.jpg')}}" alt="">
                             </div>
                             <div class="col-4">
                                 <img class="img-fluid rounded bg-light p-1" src="{{url_for('static', filename='img/IMG_7645.jpg')}}" alt="">
@@ -168,21 +156,26 @@
                             <div class="col-4">
                                 <img class="img-fluid rounded bg-light p-1" src="{{url_for('static', filename='img/IMG_7646.jpg')}}" alt="">
                             </div>
-                            <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1" src="{{url_for('static', filename='img/property-5.jpg')}}" alt="">
-                            </div>
-                            <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1" src="{{url_for('static', filename='img/property-6.jpg')}}" alt="">
-                            </div>
                         </div>
+                    </div>
+                    <div class="col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                        <iframe class="position-relative rounded w-100 h-100"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3963.1051158933096!2d106.81370887475427!3d-6.633865693360545!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69cfe668fb8481%3A0x33288b202cfd59b8!2sCluster%20Green%20Paddy%20Hills!5e0!3m2!1sen!2sid!4v1745504355483!5m2!1sen!2sid"
+                            frameborder="0" style="min-height: 150px; border:0;" allowfullscreen="" aria-hidden="false"
+                            tabindex="0"></iframe>
                     </div>
                 </div>
             </div>
             <div class="container">
                 <div class="copyright">
                     <div class="row">
-                        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                        <div class="col-md-6 text-center text-md-start mb-2 mb-md-0">
                             &copy; <a class="border-bottom" href="#">Green Paddy Hills</a>, 2025.
+                        </div>
+                        <div class="col-md-6 text-center text-md-end mb-2 mb-md-0">
+                            <a href="{{url_for('login')}}" class="admin-icon">
+                                <i class="fas fa-user-shield"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
