add form and update

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -41,7 +41,9 @@
     <div class="sidebar">
         <a href="{{ url_for('dashboard') }}">Dashboard</a>
         <a href="#" onclick="confirmLogout()">Logout</a>
-        <a href="{{ url_for('list_properties') }}" id="manage-properties-link">Manage Properties</a>
+        <a href="{{ url_for('list_properties') }}">Manage Properties</a>
+        <a href="{{ url_for('form_logs') }}">Form Logs</a>
+        <a href="{{url_for('home')}}">Halaman Utama</a>
     </div>
 
     <!-- Main Content -->
