--- a/static/css/style.css
+++ b/static/css/style.css
@@ -374,6 +374,24 @@
     background: var(--dark);
 }
 
+.testimonial-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.testimonial-item .border {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.testimonial-item p {
+    text-align: justify;
+}
+
 
 /*** Footer ***/
 .footer {
@@ -453,4 +471,12 @@
     border-radius: 10px;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.customer-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
