--- a/templates/login.html
+++ b/templates/login.html
@@ -48,9 +48,9 @@
             <button type="submit" class="btn btn-primary w-100">Login</button>
         </form>
 
-        <div class="text-center mt-3">
+        <!-- <div class="text-center mt-3">
             <a href="{{ url_for('register') }}">Don't have an account? Register here</a>
-        </div>
+        </div> -->
     </div>
 </body>
 </html>
