--- a/templates/about.html
+++ b/templates/about.html
@@ -73,8 +73,10 @@
         <div class="container-fluid header bg-white p-0">
             <div class="row g-0 align-items-center flex-column-reverse flex-md-row">
                 <div class="col-md-6 p-5 mt-lg-5">
-                    <h1 class="display-5 animated fadeIn mb-4">About Us</h1> 
-                        <nav aria-label="breadcrumb animated fadeIn">
+                    <h1 class="display-5 animated fadeIn mb-4" style="margin-top: 20px;">About Us</h1>
+                    <p class="animated fadeIn">Green Paddy Hills adalah proyek hunian terbaru dari Benoit Properti Indonesia, sebuah perusahaan pengembang properti yang telah berdiri sejak tahun 2013 dan berfokus pada pengembangan kawasan perumahan berkualitas di wilayah Tangerang. Sejak awal, Benoit Properti Indonesia hadir dengan komitmen untuk menciptakan hunian modern yang nyaman, terjangkau, dan berada di lokasi strategis. Proyek pertama perusahaan yang terletak di Karawaci telah sukses terjual habis, disusul dengan proyek kedua bertajuk Padi Hijau Residence yang berlokasi di Rajeg, Tangerang, Banten. Green Paddy Hills menjadi proyek ketiga yang sekaligus melanjutkan reputasi positif perusahaan dalam dunia properti.</p>
+                    <p class="animated fadeIn">Sebagai developer utama, Benoit Properti Indonesia selalu mengedepankan konsep rumah modern minimalis dengan harga yang kompetitif, bahkan termurah dibandingkan proyek-proyek sejenis di area yang sama. Tidak hanya itu, Green Paddy Hills hadir dengan keunggulan eksklusif, yakni memberikan fleksibilitas kepada calon penghuni untuk melakukan custom design sesuai keinginan—memberikan sentuhan pribadi dalam setiap detail rumah. Dengan lokasi yang strategis, desain yang modern, dan harga yang bersaing, Green Paddy Hills menjadi pilihan ideal bagi keluarga maupun individu yang mencari hunian nyaman dengan nilai investasi tinggi. Benoit Properti Indonesia percaya bahwa rumah bukan sekadar tempat tinggal, melainkan fondasi bagi masa depan yang lebih baik.</p>
+                    <nav aria-label="breadcrumb animated fadeIn">
                     </nav>
                 </div>
                 <div class="col-md-6 animated fadeIn">
