--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -43,6 +43,7 @@
         <a href="#" onclick="confirmLogout()">Logout</a>
         <a href="{{ url_for('list_properties') }}">Manage Properties</a>
         <a href="{{ url_for('form_logs') }}">Form Logs</a>
+        <a href="{{ url_for('list_reviews') }}">Review Customer</a>
         <a href="{{url_for('home')}}">Halaman Utama</a>
     </div>
 
