--- a/templates/contact.html
+++ b/templates/contact.html
@@ -75,7 +75,7 @@
                     </nav>
                 </div>
                 <div class="col-md-6 animated fadeIn">
-                    <img class="img-fluid" src="{{ url_for('static', filename='img/cover-contact.jpg') }}" alt="">
+                    <img class="img-fluid" src="{{ url_for('static', filename='img/contact-kanan.png') }}" alt="">
                 </div>
             </div>
         </div>
