--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,10 @@
         <div class="container-fluid header bg-white p-0">
             <div class="row g-0 align-items-center flex-column-reverse flex-md-row">
                 <div class="col-md-6 p-5 mt-lg-5">
-                    <h1 class="display-5 animated fadeIn mb-4">Temukan <span style="color: darkgreen;">Rumah Sempurna</span> Untuk Tinggal Bersama Keluarga Anda</h1>
+                    <h1 class="display-5 animated fadeIn mb-4">Wujudkan <span style="color: darkgreen;">Hunian Idaman</span> Nyaman & Terjangkau untuk Keluarga Anda</h1>
+                    <!-- <p class="animated fadeIn">Green Paddy Hills – Hunian Modern Minimalis di Lokasi Strategis Cipaku, Kota Bogor, dengan Harga Terjangkau dan Kualitas Terbaik di Kelasnya</p>
+                    <nav aria-label="breadcrumb animated fadeIn">
+                    </nav> -->
                 </div>
                 <div class="col-md-6 animated fadeIn">
                     <div class="owl-carousel header-carousel">
@@ -101,7 +104,7 @@
         <div class="container-xxl py-5 text-center" style="background-color: #ccffcc; border-radius: 8px;">
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1000px;">
-                    <h2 class="mb-3">Green Paddy Hills – Rumah Modern Minimalis Dengan Lokasi Strategis Dengan Harga Termurah Di Cipaku, Kota Bogor</h2>
+                    <h2 class="mb-3">Green Paddy Hills – Hunian Modern Minimalis di Lokasi Strategis Cipaku, Kota Bogor, dengan Harga Terjangkau dan Kualitas Terbaik di Kelasnya</h2>
                     <p>Green Paddy Hills, merupakan perumahan mewah di Bogor yang dibangun pada lokasi yang aman,
                         nyaman, dan asri. Anda bisa memiliki rumah premium ini dengan DP yang ringan serta dapat dicicil. Untuk
                         memberikan kualitas hidup yang baik serta menjaga nilai investasi properti agar tetap tinggi, hunian
@@ -264,7 +267,22 @@
                                     <img class="img-fluid w-100 small-img mt-3 img" src="{{ url_for('static', filename='img/Copy Of Site Plan.png') }}" style="width:100%; height: 400px; object-fit: cover;" alt="Type Property">
                                 </div>
                                 <div class="owl-carousel-item">
-                                    <img class="img-fluid w-100 small-img mt-3 img" src="{{ url_for('static', filename='img/type.jpg') }}" style="width:100%; height: 400px; object-fit: cover;" alt="Type Property">
+                                    <img class="img-fluid w-100 small-img mt-3 img" src="{{ url_for('static', filename='img/konsep-terbaru.png') }}" style="width:100%; height: 400px; object-fit: cover;" alt="Type Property">
+                                </div>
+                                <div class="owl-carousel-item">
+                                    <img class="img-fluid w-100 small-img mt-3 img" src="{{ url_for('static', filename='img/konsep-terbaru1.png') }}" style="width:100%; height: 400px; object-fit: cover;" alt="Type Property">
+                                </div>
+                                <div class="owl-carousel-item">
+                                    <img class="img-fluid w-100 small-img mt-3 img" src="{{ url_for('static', filename='img/konsep-terbaru2.png') }}" style="width:100%; height: 400px; object-fit: cover;" alt="Type Property">
+                                </div>
+                                <div class="owl-carousel-item">
+                                    <img class="img-fluid w-100 small-img mt-3 img" src="{{ url_for('static', filename='img/konsep-terbaru3.png') }}" style="width:100%; height: 400px; object-fit: cover;" alt="Type Property">
+                                </div>
+                                <div class="owl-carousel-item">
+                                    <img class="img-fluid w-100 small-img mt-3 img" src="{{ url_for('static', filename='img/konsep-terbaru4.png') }}" style="width:100%; height: 400px; object-fit: cover;" alt="Type Property">
+                                </div>
+                                <div class="owl-carousel-item">
+                                    <img class="img-fluid w-100 small-img mt-3 img" src="{{ url_for('static', filename='img/konsep-terbaru5.png') }}" style="width:100%; height: 400px; object-fit: cover;" alt="Type Property">
                                 </div>
                             </div>
                             <!-- <img class="img-fluid w-100 small-img mt-3 img" src="{{ url_for('static', filename='img/Copy Of Site Plan.png') }}" style="width:100%; height: 300px; object-fit: cover;" alt="Type Property"> -->
@@ -383,45 +401,21 @@
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                     <h1 class="mb-3">Our Customer Say!</h1>
-                    <!-- <p>Eirmod sed ipsum dolor sit rebum labore magna erat. Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed rebum vero dolor duo.</p> -->
                 </div>
                 <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
+                    {% for review in reviews %}
                     <div class="testimonial-item bg-light rounded p-3">
                         <div class="bg-white border rounded p-4">
-                            <p>Proses pembelian rumahnya sangat cepat dan mudah. Pengajuan KPR nya juga cepat sehingga saya sekarang sudah bisa menempati rumahnya sekarang</p>
+                            <p>{{ review.isi_review }}</p>
                             <div class="d-flex align-items-center">
-                                <!-- <img class="img-fluid flex-shrink-0 rounded" src="{{url_for('static', filename='img/testimonial-1.jpg')}}" style="width: 45px; height: 45px;"> -->
                                 <div class="ps-3 customer-info">
                                     <h6 class="fw-bold mb-1">Customer</h6>
-                                    <small>Herlina</small>
+                                    <small>{{ review.nama_customer }}</small>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="testimonial-item bg-light rounded p-3">
-                        <div class="bg-white border rounded p-4">
-                            <p>Lokasinya strategis dekat dengan pusat kota dan akses tol. Proses administrasinya juga cepat dan transparan, jadi saya merasa sangat aman membeli rumah ini</p>
-                            <div class="d-flex align-items-center">
-                                <!-- <img class="img-fluid flex-shrink-0 rounded" src="{{url_for('static', filename='img/testimonial-2.jpg')}}" style="width: 45px; height: 45px;"> -->
-                                <div class="ps-3 customer-info">
-                                    <h6 class="fw-bold mb-1">Customer</h6>
-                                    <small>Firman</small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="testimonial-item bg-light rounded p-3">
-                        <div class="bg-white border rounded p-4">
-                            <p>Sangat puas karena bisa membangun rumah dengan denah yang saya custom sendiri. Bahkan, saya menambah tingkat di atasnya, prosesnya dibantu sampai selesai dan hasilnya memuaskan</p>
-                            <div class="d-flex align-items-center">
-                                <!-- <img class="img-fluid flex-shrink-0 rounded" src="{{url_for('static', filename='img/testimonial-3.jpg')}}" style="width: 45px; height: 45px;"> -->
-                                <div class="ps-3 customer-info">
-                                    <h6 class="fw-bold mb-1">Customer</h6>
-                                    <small>Virna</small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    {% endfor %}
                 </div>
             </div>
         </div>
